Adopt Java 17 rules